change main package.json to start app

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server/server.js"
+    "start": "cd server && node server.js && cd - "
   },
   "repository": {
     "type": "git",
