--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "node server"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "ws": "^7.4.4"
+    "socket.io": "^4.0.1"
   }
 }
